--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
     <string name="discoverable">使设备可被发现</string>
     <string name="device_test">校准设备</string>
     <string name="login_server_ip">服务器地址:</string>
-    <string name="login_account">登陆账号:</string>
+    <string name="login_account">登陆账号</string>
     <string name="login_pwd">用户密码:</string>
     <string name="login_checkbox_save_pwd">记住密码</string>
     <string name="login_button_login">登陆</string>
